fix top menu collapsing, change page title

--- a/src/styles/AppHeader/top-menu.scss
+++ b/src/styles/AppHeader/top-menu.scss
@@ -84,6 +84,23 @@ nav {
         .hamburger-menu {
             ul {
                 height: auto;
+
+                .nav-item {
+                    .underline {
+                        position: relative;
+
+                        &:after {
+                            content: "";
+                            width: 100%;
+                            height: .2em;
+                            background: $purple;
+                            opacity: 50%;
+                            position: absolute;
+                            bottom: -2px;
+                            left: 0;
+                        }
+                    }
+                }
             }
         }
     }
